unpackaged/main/default/objects/litify_pm__Injury__c/litify_pm__Injury__c.object-meta.xml
<CustomObject>
    <label>Injury</label>
    <nameField>
        <displayFormat>INJ-{0000}</displayFormat>
        <label>Injury ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Injuries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>