unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Area_Affected__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Area_Affected__c</fullName>
    <label>Area Affected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>