unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Body_Part__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Body_Part__c</fullName>
    <label>Body Part</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Brain</fullName>
            </value>
            <value>
                <fullName>Buttocks</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Collarbone</fullName>
            </value>
            <value>
                <fullName>Eyebrow</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Forehead</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Genitals</fullName>
            </value>
            <value>
                <fullName>Groin</fullName>
            </value>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Internal Organ</fullName>
            </value>
            <value>
                <fullName>Jaw</fullName>
            </value>
            <value>
                <fullName>Left Ankle</fullName>
            </value>
            <value>
                <fullName>Left Arm</fullName>
            </value>
            <value>
                <fullName>Left Breast</fullName>
            </value>
            <value>
                <fullName>Left Ear</fullName>
            </value>
            <value>
                <fullName>Left Elbow</fullName>
            </value>
            <value>
                <fullName>Left Eye</fullName>
            </value>
            <value>
                <fullName>Left Finger</fullName>
            </value>
            <value>
                <fullName>Left Foot</fullName>
            </value>
            <value>
                <fullName>Left Hand</fullName>
            </value>
            <value>
                <fullName>Left Heel</fullName>
            </value>
            <value>
                <fullName>Left Hip</fullName>
            </value>
            <value>
                <fullName>Left Knee</fullName>
            </value>
            <value>
                <fullName>Left Leg</fullName>
            </value>
            <value>
                <fullName>Left Palm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>