unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Claim_Filed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Claim_Filed__c</fullName>
    <label>Claim Filed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>