unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>