unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Injuries_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Injuries_Symptoms__c</fullName>
    <label>Injuries/Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Sprain/Strain</fullName>
            </value>
            <value>
                <fullName>Headaches/Migraines</fullName>
            </value>
            <value>
                <fullName>Numbness</fullName>
            </value>
            <value>
                <fullName>Tingling</fullName>
            </value>
            <value>
                <fullName>Bruising</fullName>
            </value>
            <value>
                <fullName>Abrasion</fullName>
            </value>
            <value>
                <fullName>Amputation</fullName>
            </value>
            <value>
                <fullName>Annular Tear</fullName>
            </value>
            <value>
                <fullName>Blurry Vision</fullName>
            </value>
            <value>
                <fullName>Break</fullName>
            </value>
            <value>
                <fullName>Broad Based Herniated Disk</fullName>
            </value>
            <value>
                <fullName>Bulging Disc</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cartilage Tear</fullName>
            </value>
            <value>
                <fullName>Coma</fullName>
            </value>
            <value>
                <fullName>Concussion</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Decubitus Ulcer</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Difficulty Concentrating</fullName>
            </value>
            <value>
                <fullName>Dislocation</fullName>
            </value>
            <value>
                <fullName>Dizziness</fullName>
            </value>
            <value>
                <fullName>Double Vision</fullName>
            </value>
            <value>
                <fullName>Fracture</fullName>
            </value>
            <value>
                <fullName>Gangrene</fullName>
            </value>
            <value>
                <fullName>Hearing Difficulties</fullName>
            </value>
            <value>
                <fullName>Herniated Disk</fullName>
            </value>
            <value>
                <fullName>Impingement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>