unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Injury_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Injury_Date__c</fullName>
    <label>Injury Date</label>
    <type>Date</type>
</CustomField>