unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Injuries</relationshipLabel>
    <relationshipName>Injuries</relationshipName>
    <type>Lookup</type>
</CustomField>