unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Injuries</relationshipLabel>
    <relationshipName>Injuries</relationshipName>
    <type>Lookup</type>
</CustomField>