unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__of_Treatments_Completed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__of_Treatments_Completed__c</fullName>
    <label># of Treatments Completed</label>
    <summaryFilterItems>
        <field>litify_pm__Treatment__c.litify_pm__Treatment_Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>litify_pm__Treatment__c.litify_pm__Injury__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>