unpackaged/main/default/objects/litify_pm__Injury__c/fields/litify_pm__of_Treatments_Recommended__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__of_Treatments_Recommended__c</fullName>
    <label># of Treatments Recommended</label>
    <summaryForeignKey>litify_pm__Treatment__c.litify_pm__Injury__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>